--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,7 +10,6 @@
 body {
   // font-family: 'Comforter';
   font-family: sans-serif;
-  background: #eee;
 }
 
 .main {
@@ -22,35 +21,55 @@ body {
 
 .recorder {
   flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .btn {
-  flex: 1;
-  height: 100%;
-  font-size: 128px;
-  background: fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
   border-color: #fff;
   transition: 0.2s ease all;
   cursor: pointer;
-
+  
   &:hover {
     background: #ddd;
   }
 
-  &.is-start {
-    color: red;
+  &:active {
+    .icon {
+      width: 60px;
+      height: 60px;
+    }
   }
-  
-  &.is-recording {
+
+  .is-recording & {
     background: red;
-    color: #fff;
   }
 
   &.is-disabled, &[disabled] {
+    z-index: -1;
     pointer-events: none;
+  }
+}
+
+.icon {
+  width: 64px;
+  height: 64px;
+  transition: 0.2s ease all;
+
+  &.is-record {
+    background: red;
+    border-radius: 50%;
+  }
+
+  &.is-stop {
+    background: #000;
   }
 }
 
@@ -59,7 +78,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  background: #eee;
   overflow: auto;
+  transition: 0.2s ease all;
 }
 
 .table {
@@ -85,23 +106,37 @@ body {
   
   th, td {
     padding: 12px;
-
+    
     &:not(:last-of-type) {
       border-right: 1px solid #fff;
     }
   }
-}
 
-.copy {
-  position: absolute;
-  width: 100%;
-  height: 50%;
-  background: #000;
-  opacity: 0;
-  transition: 0.2s ease all;
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.1;
+  &.is-docs {
+    th, td {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      .icon {
+        width: 12px;
+        height: 12px;
+        margin-right: 6px;
+      }
+    }
   }
 }
+
+// .copy {
+//   position: absolute;
+//   width: 100%;
+//   height: 50%;
+//   background: #000;
+//   opacity: 0;
+//   transition: 0.2s ease all;
+//   cursor: pointer;
+
+//   &:hover {
+//     opacity: 0.1;
+//   }
+// }
