--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,26 +52,20 @@ body {
     background: red;
   }
 
-  &.is-disabled, &[disabled] {
-    z-index: -1;
-    pointer-events: none;
-  }
-}
-
-.icon {
-  width: 64px;
-  height: 64px;
-  transition: 0.2s ease all;
-
-  &.is-record {
+  & > .icon {
+    width: 64px;
+    height: 64px;
+    transition: 0.2s ease all;
     background: red;
     border-radius: 50%;
-  }
-
-  &.is-stop {
-    background: #000;
+    
+    .is-recording & {
+      background: #000;
+      border-radius: unset;
+    }
   }
 }
+
 
 .output {
   flex: 1;
