--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,13 @@
 //   font-style: normal;
 // }
 
+$background-color: #eee;
+$background-darker-color: #ddd;
+$border-color: #fff;
+$recording-color: red;
+$stop-color: #000;
+$loading-color: green;
+
 body {
   // font-family: 'Comforter';
   font-family: sans-serif;
@@ -32,13 +39,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #eee;
-  border-color: #fff;
+  background: $background-color;
+  border-color: $border-color;
   transition: 0.2s ease all;
   cursor: pointer;
   
   &:hover {
-    background: #ddd;
+    background: $background-darker-color;
   }
 
   &:active {
@@ -49,23 +56,22 @@ body {
   }
 
   .is-recording & {
-    background: red;
+    background: $recording-color;
   }
 
   & > .icon {
     width: 64px;
     height: 64px;
     transition: 0.2s ease all;
-    background: red;
+    background: $recording-color;
     border-radius: 50%;
     
     .is-recording & {
-      background: #000;
+      background: $stop-color;
       border-radius: unset;
     }
   }
 }
-
 
 .output {
   flex: 1;
@@ -73,7 +79,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   position: relative;
-  background: #eee;
+  background: $background-color;
   overflow: auto;
   transition: 0.2s ease all;
 }
@@ -87,15 +93,15 @@ body {
 
   tr {
     &:not(:last-of-type) {
-      border-bottom: 1px solid #fff;
+      border-bottom: 1px solid $border-color;
     }
 
     &:nth-child(odd) {
-      background-color: #eee;
+      background-color: $background-color;
     }
     
     &:nth-child(even) {
-      background-color: #ddd;
+      background-color: $background-darker-color;
     }
   }
   
@@ -103,7 +109,7 @@ body {
     padding: 12px;
     
     &:not(:last-of-type) {
-      border-right: 1px solid #fff;
+      border-right: 1px solid $border-color;
     }
   }
 
@@ -117,6 +123,15 @@ body {
         width: 12px;
         height: 12px;
         margin-right: 6px;
+
+        &.is-record {
+          background: $recording-color;
+          border-radius: 50%;
+        }
+      
+        &.is-stop {
+          background: $stop-color;
+        }
       }
     }
   }
@@ -128,7 +143,7 @@ body {
   left: 0;
   width: 0;
   height: 100%;
-  background: green;
+  background: $loading-color;
   transition: 0.4s linear all;
 
   &.is-hidden {
