Changed transcriber to a web worker to allow for multiple concurrent transcriptions and improved performance

--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -8,7 +8,7 @@
   cursor: text;
 
   [data-mode="freestyle"][data-dark-theme] & {
-    border-top: $border-width solid $menu-color;
+    border-top: $border-width solid $settings-color;
   }
   
   thead,
