--- a/src/styles/settings/color.scss
+++ b/src/styles/settings/color.scss
@@ -11,7 +11,7 @@ $focus-color: #d9effc;
 $focus-dark-color: $border-dark-color;
 $loading-color: #eee;
 $loading-dark-color: $border-dark-color;
-$menu-color: #9dabdd;
+$settings-color: #9dabdd;
 $theme-color: #ecbe7a;
 $download-color: #9dabdd;
 $add-color: #70ae98;
