--- a/src/styles/components/settings.scss
+++ b/src/styles/components/settings.scss
@@ -1,10 +1,10 @@
-.menu {
+.settings {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: $menu-color;
+  background: $settings-color;
   border: $border-width solid $border-color;
   box-sizing: border-box;
   opacity: 0;
@@ -19,7 +19,7 @@
     align-content: flex-start;
   }
 
-  [data-menu-open] & {
+  [data-settings-open] & {
     opacity: 1;
     visibility: visible;
   }
