--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 
 //elements
 @import './elements/body';
+@import './elements/main';
 
 //objects
 @import './objects/button';
@@ -21,7 +22,6 @@
 @import './objects/loader';
 
 //components
-@import './components/main';
 @import './components/output';
 @import './components/recorder';
 @import './components/settings';
